<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="secondVM"
            type="com.json.jandroid.activity.view.SecondViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:duplicateParentState="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"/>
    <LinearLayout
        android:id="@+id/second_context_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/second_close_btn_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:background="@null"
                android:src="@drawable/second_close_btn"
                tools:ignore="ContentDescription"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:src="@drawable/second_title_img"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textSize="32sp"
            android:textColor="#202020"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/second_title">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_second"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginVertical="16dp"
                android:textColor="#202020"
                android:text="@string/second_title_ask"
                android:gravity="center_horizontal|center_vertical">
            </TextView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/bullet_point"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="top"
                        tools:ignore="ContentDescription"
                        />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#202020"
                    android:text="@string/second_title_ask_1"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/bullet_point"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="top"
                        tools:ignore="ContentDescription"
                         />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#202020"
                    android:text="@string/second_title_ask_2"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/second_btn_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/rounded_background_btn"
            android:text="@string/first_btn"
            />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
